<resources>
    <string name="app_name">Newsnippet</string>
    <string name="title_home">Home</string>
    <string name="title_bookmark">Bookmark</string>
    <string name="title_input_keywords">Input Keywords…</string>
    <string name="title_top_headlines">Top Headlines</string>
    <string name="cd_news_image">news image</string>
    <string name="cd_button_more">button more</string>
    <string name="title_news_detail">News Detail</string>
    <string name="cd_message_back_button">back button</string>
    <string name="text_author_source_placeholder">By %s, %s</string>
    <string name="text_source_placeholder">By %s</string>
    <string name="title_open_news_portal">Open news portal</string>
    <string name="text_message_no_bookmarks">You don\'t have bookmarks yet. When reading the article, tap the bookmark icon to save it. You\'ll come back here to read it later</string>
    <string name="cd_add_bookmark_icon">add bookmark icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_delete">Delete</string>
    <string name="title_share">Share</string>
    <string name="text_name">Achsani Taqwim</string>
    <string name="text_username_github">achsanit</string>
    <string name="text_email">achsanit87@gmail.com</string>
    <string name="title_profile">Profile</string>
    <string name="cd_avatar_image">avatar image</string>
    <string name="cd_github_icon">github icon</string>
    <string name="cd_gmail_icon">gmail icon</string>
</resources>