<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.profile.ProfileFragment">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:elevation="0dp"
        app:strokeColor="@color/black"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/cd_avatar_image"
            android:src="@drawable/achsani_taqwim"
            tools:ignore="ImageContrastCheck" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/text_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_avatar"
        app:layout_constraintStart_toStartOf="parent" />
    
    <ImageView
        android:id="@+id/iv_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_github"
        android:contentDescription="@string/cd_github_icon"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/tv_username_github"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name" />

    <TextView
        android:id="@+id/tv_username_github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_username_github"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_github"
        app:layout_constraintTop_toTopOf="@id/iv_github" />

    <ImageView
        android:id="@+id/iv_gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_gmail"
        android:contentDescription="@string/cd_gmail_icon"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_github" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_gmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_gmail"
        app:layout_constraintTop_toTopOf="@id/iv_gmail" />


</androidx.constraintlayout.widget.ConstraintLayout>