<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.bookmark.BookmarkFragment">



    <RelativeLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="2dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="32sp"
            android:gravity="center"
            android:text="@string/title_bookmark"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ib_trash"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/cd_message_back_button"
            android:src="@drawable/ic_delete_rounded"
            app:shapeAppearance="@style/roundedImageView.smallRounded"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck,RedundantDescriptionCheck" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bookmark"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar">

        <ImageView
            android:id="@+id/iv_add_bookmark"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_add_bookmark"
            android:contentDescription="@string/cd_add_bookmark_icon"
            app:layout_constraintBottom_toTopOf="@id/tv_no_bookmarks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_no_bookmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="84dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_add_bookmark"
            android:text="@string/text_message_no_bookmarks"
            tools:ignore="VisualLintLongText" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>